Title/Description change

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Jeremy Tucker Food Site Template</title>
-	<meta name="description" content="This is a food template for web designer Jeremy Tucker. If you have interest in hiring, please visit the contact form at jeremytucker.net.">
+	<title>Far Out Freds</title>
+	<meta name="description" content="We're a premier food truck in Indianapolis, Indiana, serving gourmet, international, open-faced sandwiches.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
