--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					About Us
 				</h1>
 				<h2 class="aboutContent" >
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis esse itaque, ut quae rerum ex corporis dolorem. Laudantium ut ipsam quaerat veritatis magnam tenetur pariatur enim debitis, consequuntur accusantium maiores, culpa nulla impedit, quia qui temporibus odio sed eius quos sequi aperiam iste, et repudiandae. Cum obcaecati, aspernatur. Tempora minus adipisci odit fugit inventore fugiat labore esse ex. Blanditiis tempore aliquam ad id corporis, impedit ex laborum laboriosam sunt consectetur.
+					In October 2013 a dream was born, what started with three friends ( Lisa Rondelli, Todd Richwine & April Richwine) and a love of food quickly turned into Far-Out Fred's Food truck. Each friend had their favorite eateries around Indianapolis & a special one for each different kind of cuisine. While thinking for ideas for what kind of truck many different options came & went when they were reminded of a childhood favorite. 
 				</h2>
 			</div>
 		</div>
@@ -115,7 +115,7 @@
 
 		<div class="col-md-6">
 			<h2 class="aboutContent">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut dolor saepe sequi soluta dolore nostrum culpa consequatur debitis voluptatem a tenetur accusamus provident rem laudantium veniam magnam repellat adipisci, delectus quas quia quaerat laborum nam, numquam commodi? Sit ut architecto doloribus iusto hic, neque recusandae, consequatur, doloremque possimus unde cupiditate deleniti ex laudantium animi, modi reprehenderit. Esse veniam rem et fugit, cupiditate laboriosam molestiae eum voluptas iusto deserunt, omnis repellendus temporibus harum dolores. Eum quaerat pariatur alias veritatis ea modi!
+				The way this "burger" was created in their childhood sparked the idea of taking the same concept but personalizing it for each different country around the world. Bringing the need to stop at multiple locations to get the best from different cuisines non-existent. Together they created each burger featured on the menu & the delicious sides that accompany them. In 2015, an owner April Richwine (pictured) submitted these ideas to Indy's Hottest Kitchen Entrepreneur Challange here in Indianapolis,IN & was selected as a top 3 finalist. Our love for good food, good friends & a good time has allowed us to travel in our truck & spread culinary bliss to Indianapolis & surrounding counties. 
 			</h2>
 		</div>
 	</div>
